--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <script id="vshader" type="x-shader/x-vertex">
         attribute vec3 aVertexPosition;
-        attribute vec3 aTexCoord;
+        attribute vec4 aColor;
         attribute vec3 aNormal;
 
         uniform mat4 uModelViewMatrix;
@@ -34,12 +34,12 @@
         uniform vec3 lightDir;
 
         varying float vDot;
-        varying vec2  vTexCoord;
+        varying vec4  vColor;
 
         void main(void) {
             gl_Position = uProjMatrix * uModelViewMatrix * vec4(aVertexPosition, 1.0);
 
-            vTexCoord = aTexCoord.st;
+            vColor = aColor;
 
             vec4 norm = uNormalMatrix * vec4(aNormal, 1.0);
             vDot = max(dot(norm.xyz, lightDir), 0.0);
@@ -50,12 +50,11 @@
         precision mediump float;
 
         varying float vDot;
-        varying vec2  vTexCoord;
+        varying vec4  vColor;
 
         void main()
         {
-            vec4 color = vec4(1., 0., 1., 1.);
-            gl_FragColor = vec4(color.xyz * vDot, color.a);
+            gl_FragColor = vec4(vColor.xyz * vDot, vColor.a);
         }
     </script>
 
