--- a/index.html
+++ b/index.html
@@ -22,6 +22,22 @@
 <body>
     <canvas id="canvas" width="600" height="600">Seems like your browser does not support canvas, sorry.</canvas>
 
+    <p>TODO: color layout (texture)</p>
+    <p>TODO: lighting on/off</p>
+    <p>TODO: dot product bias</p>
+    <p>TODO: dot product constant</p>
+    <p>TODO: shader code</p>
+    <p>TODO: projection</p>
+    <p>TODO: light dir</p>
+
+    <button id="rot-left">&lt;y</button>
+    <button id="rot-right">y&gt;</button>
+    <br/>
+    <button id="rot-bkw">&lt;x</button>
+    <button id="rot-fwd">x&gt;</button>
+    <br/>
+    <button id="rot-roll-left">&lt;z</button>
+    <button id="rot-roll-right">z&gt;</button>
 
     <script id="vshader" type="x-shader/x-vertex">
         attribute vec3 aVertexPosition;
@@ -54,16 +70,20 @@
 
         void main()
         {
-            gl_FragColor = vec4(vColor.xyz * vDot, vColor.a);
+            float bias = .0;
+            vec3 color = vColor.xyz + vec3(bias);
+            float mult = 0.9;//vDot + .8;
+            gl_FragColor = vec4(color * mult, vColor.a);
         }
     </script>
 
     <script type="text/javascript" src="glMatrix-0.9.5.min.js"></script>
-    <!--<script src="jquery-1.7.2.js" type="text/javascript" charset="utf-8"></script>-->
+    <script src="jquery-1.7.2.js" type="text/javascript" charset="utf-8"></script>
     <!--<script src="webgl-utils.js" type="text/javascript" charset="utf-8"></script>-->
     <!--<script src="webgl-debug.js" type="text/javascript" charset="utf-8"></script>-->
     <!--<script src="J3DI.js" type="text/javascript" charset="utf-8"></script>-->
     <!--<script src="J3DIMath.js" type="text/javascript" charset="utf-8"></script>-->
+    <script src="../bezier/gmath.js" type="text/javascript" charset="utf-8"></script>
     <script src="cubism.js" type="text/javascript" charset="utf-8"></script>
 
     <script type="text/javascript" charset="utf-8">
